app/_component/_themeAble/_frame/_page/adminPage/pageFrame/pageFrame.css
:host {
  position: relative;
  will-change: transform;
}


page-heading {
  display: flex;
  position: absolute;
  top: -35px;
  left: 20px;
  font-weight: bold;
  font-size: 1.2em;
  cursor: pointer;
  user-select: none;
  width: max-content;
  max-width: calc(calc(100% - 40px) * var(--scale));
}

page-heading span {
  text-overflow: ellipsis;
  overflow: hidden; 
  white-space: nowrap;
}

page-wrapper {
  border-radius: 30px;
  overflow: hidden;
  box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);
  background-color: white;

  display: block;
}

